gobmkida/c3/safe_move
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/safe_move/src/engine/reading.c:5002:7: error: use of undeclared identifier 'safe_move_initialized'
if ( !safe_move_initialized ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/safe_move/src/engine/reading.c:5005:1: error: use of undeclared identifier 'safe_move_initialized'
safe_move_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/safe_move/src/obj/1/reading.o] Error 1
